--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <pre id="ghost-nation">Ghost Nation</pre>
         </h2>
         <p>
-          <pre>Only one peer can initiate cnnection. Both have to paste their peer's ID/Payload to join connection</pre>
+          <pre>Only one peer should initiate connection. Both have to paste their peer's ID/Payload to join connection</pre>
         </p>
     </div>
 
