--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/skeleton.min.css"/>
     <link rel="stylesheet" href="assets/main.css"/>
+    <link rel="stylesheet" href="assets/posenet.css">
+    <!-- for posenet -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -36,17 +39,14 @@
     </div>
 
     <!-- vid -->
-    <div class="container">
-        <div class="row">
-          <div class="one-half column other-video-container">
-            <video id="other-video" width="300" height="200"></video>
-          </div>
-          <div class="one-half column my-video-containerr">
-            <video id="my-video" width="300" height="200"></video>
-          </div>
-        </div>
+    <div id="liveView" class="webcam-l">
+      <video id="other-video" autoplay></video>
     </div>
-    <br/>
+
+    <!-- video id="my-video" width="300" height="200"></video -->
+    <div id="liveView" class="webcam-r">
+      <video id="my-video" autoplay></video>
+    </div>
     <br/>
 
     <!-- messaging -->
@@ -71,5 +71,8 @@
 
 
     <script src="bundle.js" charset="utf-8"></script>
+    <script src="posenet.js"></script>
+    <!-- for posenet -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
   </body>
 </html>
