--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/skeleton.min.css"/>
     <link rel="stylesheet" href="assets/main.css"/>
-    <link rel="stylesheet" href="assets/posenet.css">
-    <!-- for posenet -->
+    <!-- for tfjs -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
   </head>
 
@@ -39,14 +38,19 @@
     </div>
 
     <!-- vid -->
-    <div id="liveView" class="webcam-l">
-      <video id="other-video" autoplay></video>
+    <div class="container">
+        <div class="row">
+          <div class="one-half column other-video-container">
+            <video id="other-video" width="300" height="200"></video>
+            <canvas id="other-canvas" width="300" height="200"></canvas>
+          </div>
+          <div class="one-half column my-video-containerr">
+            <video id="my-video" width="300" height="200"></video>
+            <canvas id="my-canvas" width="300" height="200"></canvas>
+          </div>
+        </div>
     </div>
-
-    <!-- video id="my-video" width="300" height="200"></video -->
-    <div id="liveView" class="webcam-r">
-      <video id="my-video" autoplay></video>
-    </div>
+    <br/>
     <br/>
 
     <!-- messaging -->
@@ -67,12 +71,8 @@
         </div>
     </div>
 
-    <!-- messaging -->
-
-
-    <script src="bundle.js" charset="utf-8"></script>
-    <script src="posenet.js"></script>
-    <!-- for posenet -->
+    <!-- for bodypix -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
+    <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
