canvas integrated. todo: fix size of output

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="row">
           <div class="one-half column other-video-container">
             <video id="other-video" width="300" height="200"></video>
-            <canvas id="other-canvas" width="300" height="200"></canvas>
+            <canvas id="other-canvas" width="300" height="200" style="background-color: white;"></canvas>
           </div>
           <div class="one-half column my-video-containerr">
             <video id="my-video" width="300" height="200"></video>
-            <canvas id="my-canvas" width="300" height="200"></canvas>
+            <canvas id="my-canvas" width="300" height="200" style="background-color: white;"></canvas>
           </div>
         </div>
     </div>
