width&ht configured! todo: make canvas disappear when loaded first time

--- a/index.html
+++ b/index.html
@@ -41,15 +41,19 @@
     <div class="container">
         <div class="row">
           <div class="one-half column other-video-container">
-            <video id="other-video" width="300" height="200"></video>
-            <canvas id="other-canvas" width="300" height="200" style="background-color: white;"></canvas>
+
           </div>
           <div class="one-half column my-video-containerr">
-            <video id="my-video" width="300" height="200"></video>
-            <canvas id="my-canvas" width="300" height="200" style="background-color: white;"></canvas>
+
           </div>
         </div>
     </div>
+    
+    <video id="other-video"></video>
+    <canvas id="other-canvas" style="background-color: white;"></canvas>
+    <br/>
+    <video id="my-video"></video>
+    <canvas id="my-canvas" style="background-color: white;"></canvas>
     <br/>
     <br/>
 
