width&ht configured! canvas done

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </div>
     
     <video id="other-video"></video>
-    <canvas id="other-canvas" style="background-color: white;"></canvas>
-    <br/>
     <video id="my-video"></video>
-    <canvas id="my-canvas" style="background-color: white;"></canvas>
+    <br/>
+    <canvas id="other-canvas" style="background-color: white; display: none;"></canvas>
+    <canvas id="my-canvas" style="background-color: white; display: none;"></canvas>
     <br/>
     <br/>
 
