width&ht configured! canvas done

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <video id="other-video"></video>
     <video id="my-video"></video>
     <br/>
-    <canvas id="other-canvas" style="background-color: white; display: none;"></canvas>
-    <canvas id="my-canvas" style="background-color: white; display: none;"></canvas>
+    <canvas id="other-canvas" style="background-color: black; display: none;"></canvas>
+    <canvas id="my-canvas" style="background-color: black; display: none;"></canvas>
     <br/>
     <br/>
 
