file transfer css added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
           <!-- messaging -->
-          <div class="nine columns">
+          <div class="ten columns">
             <div class="ten columns">
               <input id="yourMsg" maxlength = "24" placeholder="write your message here ...">
             </div>
@@ -70,9 +70,13 @@
             </div>
           </div>
           <!-- file -->
-          <div class="three columns">
+          <div class="two columns">
             <div class="twelve columns">
-              <input id="file-input" type="file">
+              <!--input id="file-input" type="file"-->
+              <label for="file-input" class="file-input">
+                Transfer File
+              </label>
+              <input id="file-input" type="file"/>
             </div>
           </div>
         </div>
