transfer file css edited

--- a/index.html
+++ b/index.html
@@ -61,19 +61,18 @@
     <div class="container">
         <div class="row">
           <!-- messaging -->
-          <div class="ten columns">
-            <div class="ten columns">
+          <div class="eight columns">
+            <div class="twelve columns">
               <input id="yourMsg" maxlength = "24" placeholder="write your message here ...">
-            </div>
-            <div class="two columns">
-              <button id="send">send</button>
             </div>
           </div>
           <!-- file -->
-          <div class="two columns">
-            <div class="twelve columns">
-              <!--input id="file-input" type="file"-->
-              <label for="file-input" class="file-input">
+          <div class="four columns">
+            <div class="six columns">
+              <button class="u-full-width" id="send">send</button>
+            </div>
+            <div class="six columns">
+              <label for="file-input" class="file-input u-full-width">
                 Transfer File
               </label>
               <input id="file-input" type="file"/>
