--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <pre id="ghost-nation">Ghost Nation</pre>
         </h2>
         <p>
-          <pre>Only one peer should initiate connection. Both have to paste their peer's ID/Payload to join connection</pre>
+          <pre>Client Side A.I Powered Peer To Peer Network. Safe, Secure & Private</pre>
         </p>
     </div>
 
@@ -27,7 +27,7 @@
           <div class="one-half column your-id-container">
             <h5>Start Connection</h5>
             <a href="#init"><button id="initiate-con">Initiate Connection</button></a>
-            <input id="yourId" placeholder="Your ID/Payload">
+            <input id="yourId" placeholder="Your ID/Payload (Appears on initiating / joining connection)">
           </div>
           <div class="one-half column other-id-container">
             <h5>Join Connection</h5>
