--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-    <title>ML Char</title>
-    <meta name="github" content="github.com/rakesh4real/P2P-V2">
+    <title>Ghost Nation</title>
     <meta name="author" content="Asapanna Rakesh <rakesh4real.github.io>">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +8,8 @@
     <link rel="stylesheet" href="assets/main.css"/>
     <!-- for tfjs -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
+    <!-- font for Ghost Nation Mobile-->
+    <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
   </head>
 
   <body>
