creeper font removed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Ghost Nation</title>
+    <title>💀 Ghost Nation</title>
     <meta name="author" content="Asapanna Rakesh <rakesh4real.github.io>">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="assets/main.css"/>
     <!-- for tfjs -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
-    <!-- font for Ghost Nation Mobile-->
-    <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet'>
   </head>
 
   <body>
