--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <pre id="ghost-nation">Ghost Nation</pre>
         </h2>
         <p>
-          <pre>Client Side A.I Powered Peer To Peer Network. Safe, Secure & Private</pre>
+          <pre>A.I Powered Client Side Peer To Peer Network. Safe, Secure & Private</pre>
         </p>
     </div>
 
@@ -24,12 +24,12 @@
     <div class="container">
         <div class="row">
           <div class="one-half column your-id-container">
-            <h5>Start Connection</h5>
-            <a href="#init"><button id="initiate-con">Initiate Connection</button></a>
+            <h6>Start Connection</h6>
+            <a href="#init"><button id="initiate-con"> Initiate Connection</button></a>
             <input id="yourId" placeholder="Your ID/Payload (Appears on initiating / joining connection)">
           </div>
           <div class="one-half column other-id-container">
-            <h5>Join Connection</h5>
+            <h6>Join Connection</h6>
             <input id="otherId" placeholder="Paste peer's ID/Payload here"></input>
             <button id="connect">Connect</button> 
           </div>
